--- a/src/app/assets/styles/base/base.css
+++ b/src/app/assets/styles/base/base.css
@@ -3,10 +3,10 @@
 @layer base {
 
     html{
-        @apply h-full
+        @apply h-full bg-white
     }
     body{
-        @apply h-full
+        @apply h-full bg-white
     }
 
     
