header footer connexion
Header et footer avec design
Menu déroulant avec redirection vers inscription/connexion.
formulaire de connexion ok

--- a/src/app/assets/styles/base/base.css
+++ b/src/app/assets/styles/base/base.css
@@ -3,10 +3,10 @@
 @layer base {
 
     html{
-        @apply h-full bg-white
+        @apply h-full 
     }
     body{
-        @apply h-full bg-white
+        @apply h-full 
     }
 
     
@@ -29,4 +29,8 @@
     h6{
         @apply text-xl
     }
+}
+
+html {
+    font-family: 'Montserrat', sans-serif;
 }
