--- a/src/app/assets/styles/components/input.css
+++ b/src/app/assets/styles/components/input.css
@@ -28,3 +28,11 @@
     @apply appearance-none relative block w-full px-3 py-2
 }
 
+.select
+{
+    @apply  appearance-none relative w-[5rem] px-3 py-2 border-[#57B526] text-gray-900 text-sm rounded-lg 
+}
+
+.option{
+    @apply  focus:ring-[#57B526] hover:text-white
+}
