--- a/src/app/assets/styles/index.css
+++ b/src/app/assets/styles/index.css
@@ -20,20 +20,13 @@
     animation-delay: 0.6s;
 }
 
-
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500&display=swap');
-
-*{
-    font-family: 'Open Sans', sans-serif;
-}
-
-.border {
+.border1 {
     border: 4px solid red !important;
 }
 
 
 /* Scroll bar */
-::-webkit-scrollbar {
+/* ::-webkit-scrollbar {
     width: 0.7rem;
 }
 
@@ -50,9 +43,9 @@
 
 ::-webkit-scrollbar-thumb:hover {
     background: #888;
-}
+} */
 
 /* for Firefox */
-html {scrollbar-color: #9e4673 #3d4a59;}
+/* html {scrollbar-color: #9e4673 #3d4a59;}
 
-html {scroll-behavior: smooth;}
+html {scroll-behavior: smooth;} */
