--- a/src/app/assets/styles/index.css
+++ b/src/app/assets/styles/index.css
@@ -26,7 +26,7 @@
 
 
 /* Scroll bar */
-/* ::-webkit-scrollbar {
+::-webkit-scrollbar {
     width: 0.7rem;
 }
 
@@ -43,9 +43,9 @@
 
 ::-webkit-scrollbar-thumb:hover {
     background: #888;
-} */
+}
 
 /* for Firefox */
-/* html {scrollbar-color: #9e4673 #3d4a59;}
+html {scrollbar-color: #9e4673 #3d4a59;}
 
-html {scroll-behavior: smooth;} */
+html {scroll-behavior: smooth;}
